	PR c++/15227 	* parser.c (cp_parser_direct_declarator): Robustify.

PR c++/15877
	* pt.c (tsubst_copy): Use decl_constant_value on enumeration
	constants in non-dependent contexts.

	PR c++/14211
	PR c++/15076
	* typeck.c (build_static_cast): Wrap casts in NON_LVALUE_EXPR when
	necessary.

	PR c++/14211
	* g++.dg/conversion/const1.C: New test.

	PR c++/15076
	* g++.dg/conversion/reinterpret1.C: New test.

	PR c++/15877
	* g++.dg/template/enum2.C: New test.

	PR c++/15227
	* g++.dg/template/error13.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@82917 138bc75d-0d04-0410-961f-82ee72b054a4